--- a/react-scheduler/standalone.html
+++ b/react-scheduler/standalone.html
@@ -18,6 +18,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 height: 50px;
             }
         </style>
+        <link rel="stylesheet" href="./mormat_standalone_scheduler.css" >
     </head>
     <body>
         <div id="main">Standalone version</div>
@@ -25,7 +26,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <script src="./mormat_standalone_scheduler.js"></script>
         <script>
             var urlParams = new URLSearchParams(window.location.search);
-            var action = urlParams.get('action') || 'render_scheduler_with_dom';
+            var action = urlParams.get('action') || 'render_scheduler';
             
             if (action === 'render_scheduler') {
                 mormat_standalone_scheduler.renderScheduler(
