--- a/jscheduler_ui/examples.html
+++ b/jscheduler_ui/examples.html
@@ -91,12 +91,14 @@
                 ['Resize events',            'week_view-resizable_events'],
                 ["i18n",                     "week_view-i18n"],
                 ["Custom hours range",       "week_view-custom_hours_range"],
+                ["Handling spanned events",  "week_view-displaying_spanned_events"], //@todo missing cucumber test
                 ['Month view',               ''],
                 ["Init scheduler",           "month_view-init_scheduler"],
                 ["Displaying events",        "month_view-displaying_events"],
                 ["Loading events with ajax", "month_view-loading_events_ajax"],
                 ["Drag and drop events",     "month_view-dragndrop_events"],
                 ["i18n",                     "month_view-i18n"],
+                ["Overlapping events",       "month_view-overlapping_events"], //@todo missing cucumber test
                 ['CRUD operations',          ,''],
                 ["Creating an event",        "crud-creating_event"],
                 ["Updating an event",        "crud-updating_event"],
