--- a/jscheduler_ui/examples.html
+++ b/jscheduler_ui/examples.html
@@ -92,6 +92,7 @@
                 ["i18n",                     "week_view-i18n"],
                 ["Custom hours range",       "week_view-custom_hours_range"],
                 ["Handling spanned events",  "week_view-displaying_spanned_events"], //@todo missing cucumber test
+                ["Showing groups",           "week_view-showing-groups"],
                 ['Month view',               ''],
                 ["Init scheduler",           "month_view-init_scheduler"],
                 ["Displaying events",        "month_view-displaying_events"],
@@ -99,10 +100,22 @@
                 ["Drag and drop events",     "month_view-dragndrop_events"],
                 ["i18n",                     "month_view-i18n"],
                 ["Overlapping events",       "month_view-overlapping_events"], //@todo missing cucumber test
+                ["Showing groups",           "month_view-showing-groups"],
+                ['Year view',                ''],
+                ["Init scheduler",           "year_view-init_scheduler"],
+                ["Displaying events",        "year_view-displaying_events"],
+                ["Loading events with ajax", "year_view-loading_events_ajax"],
+                ["Drag and drop events",     "year_view-dragndrop_events"],
+                ["i18n",                     "year_view-i18n"],
+                ["Showing groups",           "year_view-showing-groups"],
+                ['Day view',                 ''],
+                ["Showing groups",           "day_view-showing-groups"],
                 ['CRUD operations',          ,''],
                 ["Creating an event",        "crud-creating_event"],
                 ["Updating an event",        "crud-updating_event"],
                 ["Deleting an event",        "crud-deleting_event"],
+                ['Misc'],
+                ["Responsive rendering",     "misc-responsive-rendering"],
             ]);
             ko.applyBindings(viewModel);
             
