--- a/react-scheduler/index.html
+++ b/react-scheduler/index.html
@@ -32,7 +32,7 @@
         <div class="bg-light p-4 rounded-lg m-3">
             <h1 class="display-6">react-scheduler</h1>
             <p class="lead">
-                A React scheduler component
+                A google-like scheduler component for React
             </p>
             <a class="btn btn-primary rounded-0" 
                href="examples.html" 
